--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             background-color: #f0f0f0;
             margin: 0;
             padding: 0;
+             background-color:orange;
         }
 
         .container {
